<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Keng Makon</string>
    <string name="select_language">Select language</string>
    <string name="next">Next</string>
    <string name="get_started">Get started</string>
    <string name="login">Login</string>
    <string name="premium_furniture">Premium Class Furniture</string>
    <string name="no_account">Haven\'t account? Please</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_pwd">Forgot password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="have_account">Already have an account? Please</string>
    <string name="find_perfect_furniture_title">Find perfect furniture</string>
    <string name="all_categories_title">All Categories</string>
    <string name="cashback_title">Cashback</string>
    <string name="find_perfect_furniture_subtitle">Discover best furniture for your lovely home. You will love it!</string>
    <string name="all_categories_subtitle">Don’t worry to lose your package. You can track even in real-time</string>
    <string name="cashback_subtitle">Organize your cashback into some category you want</string>
    <string name="skip">Skip</string>
    <string name="incorrect_login_details">Email or Password is incorrect</string>
    <string name="create_account">Create an account</string>
    <string name="new_products">New Products</string>
    <string name="see_all">See all</string>
    <string name="products">products</string>
   <string name="fill_form">Please fill in the form to continue</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="search_hint">Try “Table”, “Sofa”, “Chair”</string>
    <string name="included_items">Included items</string>
    <string name="wishlist">Wishlist</string>
    <string name="empty_wishlist">Your wishlist is empty</string>
    <string name="looks_like_not_added_wishlist">Looks like you haven’t added anything to your wishlist yet</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Leave feedback</string>
    <string name="mobile_app">#MobileApp</string>
    <string name="delivery">#Delivery</string>
    <string name="personal">#Personal</string>
    <string name="service">#Service</string>
    <string name="call_center">#Call center</string>
    <string name="other">#Other</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="enter_subject">Enter a subject</string>
    <string name="enter_body">Enter body of subject</string>
    <string name="my_orders">My orders</string>
    <string name="branches">Branches</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="edit_account">Edit account</string>
    <string name="later">Later</string>
    <string name="cashback_best_solution">Best solution to pay furniture</string>
    <string name="keng_makon_cashback">Keng Makon Cashback</string>
    <string name="cashback_history">Cashback history</string>
    <string name="cashback_description">You can make your bedroom luxurious with just the right furniture. The Prince bedroom set looks amazing and goes well with a variety of designs.</string>
    <string name="completed">Payment completed</string>
    <string name="not_completed">Payment not completed</string>
    <string name="total_price">Total price</string>
    <string name="your_order_list_empty">Your order list is empty</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty</string>
    <string name="order_details">Order details</string>
    <string name="free_parking">Free parking</string>
    <string name="show_on_map">Show on map</string>
    <string name="copy_address">Copy address</string>
    <string name="actions">Actions</string>
    <string name="events">Events</string>
    <string name="news">News</string>
    <string name="all">All</string>
    <string name="description">Description</string>
    <string name="notifications">Notifications</string>
    <string name="get_directions">Get directions</string>

    <string name="materials">Materials</string>
    <string name="handmade">Handmade</string>
    <string name="size">Size</string>
    <string name="delivery_">Delivery</string>

    <string name="save_language">Save language</string>
    <string name="please_enter_email">Please enter your email to get a new password.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="success_change_pwd">The password has been changed successfully.</string>
    <string name="new_pwd_has_sent">New password has been sent to your email!</string>
    <string name="no_parking">No parking</string>
    <string name="loading">Loading...</string>

    <string name="not_logged_in">You are not Logged in</string>
    <string name="want_to_login">Do you want to log in?</string>
    <string name="really_want_leave">Do you really want to leave?</string>
    <string name="yes">Yes</string>;
    <string name="no">No</string>
    <string name="all_items">All items</string>
    <string name="service_officer">Service Officer</string>
    <string name="payment">Payment</string>
    <string name="summary">Summary</string>
    <string name="already_paid">Already paid</string>
    <string name="need_to_pay">Need to pay</string>
    <string name="keng_makon_branches">Keng Makon Branches</string>
    <string name="incorrect_current_pwd">The current password was entered incorrectly.</string>
    <string name="error_confirm_pwd">Error when re-entering new password.</string>
    <string name="fullname_change_success">Your name has been successfully changed.</string>
    <string name="photo_upload_success">Photo uploaded successfully!</string>
    <string name="change_password">Change password</string>
    <string name="save_username">Save username</string>
    <string name="save_photo">Save photo</string>
    <string name="new_password">New password</string>
    <string name="feedback_success_message">Your feedback has been accepted. Thank you.</string>
    <string name="not_registered_email">This email is not registered.</string>
    <string name="enter_registered_email">Please enter your email to get a new password.</string>
    <string name="renew_password">Request new password</string>
    <string name="you_may_like_these_furnitures">You may like these furniture</string>
    <string name="top_sets">Top sets</string>
    <string name="recently_viewed">Recently viewed</string>

    <string name="items">Items</string>
    <string name="sets">Sets</string>
    <string name="more">More</string>
    <string name="more_buy_more_discount">The more you buy, the more discount you get</string>
    <string name="discount">Discount</string>
</resources>