<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="15dp"
            android:textColor="#808D9E"
            android:textStyle="bold"
            android:paddingEnd="15dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="160dp"
            android:layout_height="85dp"
            android:src="@drawable/keng_makon_logo"
            android:layout_gravity="center"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:scrollIndicators="bottom">

        </androidx.viewpager.widget.ViewPager>

        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            app:dotsStrokeColor="@color/grayColor"
            app:selectedDotColor="@color/colorPrimary"
            app:dotsSize="10dp"
            app:dotsSpacing="5dp"/>



        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textColor="#AAAAAA"/>
            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="#5772F1"/>


        </LinearLayout>

    </LinearLayout>
</layout>