<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/skipBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:background="@drawable/x_btn_icon"
                android:textAllCaps="false"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"/>

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|top"
                android:fitsSystemWindows="true" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/premium_furniture"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/email_icon"
                        android:singleLine="true"
                        android:drawablePadding="10dp"
                        android:hint="@string/email"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

<!--                    <EditText-->
<!--                        android:id="@+id/password"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:singleLine="true"-->
<!--                        android:drawableStart="@drawable/lock_icon"-->
<!--                        android:drawablePadding="10dp"-->
<!--                        android:inputType="textPassword"-->
<!--                        android:hint="@string/password"-->
<!--                        android:text=""-->
<!--                        android:textColor="@color/black"-->
<!--                        android:textSize="15dp" />-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/lock_icon"
                            android:drawablePadding="10dp"
                            android:hint="@string/password"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:textSize="15dp">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/forgotPasswordBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="10dp"
                        android:padding="10dp"
                        android:text="@string/forgot_pwd"
                        android:textColor="#a9a9a9" />

                    <Button
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="15dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />


                </LinearLayout>
                <TextView
                    android:id="@+id/error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="14dp"
                    android:text=""
                    android:gravity="center"
                    android:textColor="#800000"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_account"
                        android:textColor="#AAAAAA" />

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/sign_up"
                        android:textColor="#5772F1"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

        </FrameLayout>



    </LinearLayout>
</layout>